@@ -49,43 +49,29 @@ import java.util.HashMap;
 
 /**
  * The implementation of a {@link java.security.KeyPairGenerator} adapter class
- * to wrap gnu.crypto RSA keypair generator instances.<p>
- *
- * In case the client does not explicitly initialize the KeyPairGenerator (via
- * a call to an <code>initialize()</code> method), the GNU Crypto provider
- * uses a default <i>modulus</i> size (keysize) of 1024 bits.<p>
+ * to wrap GNU RSA keypair generator instances.
+ * <p>
+ * In case the client does not explicitly initialize the KeyPairGenerator (via a
+ * call to an <code>initialize()</code> method), the GNU provider uses a
+ * default <i>modulus</i> size (keysize) of 1024 bits.
  */
-public class RSAKeyPairGeneratorSpi extends KeyPairGeneratorAdapter
+public class RSAKeyPairGeneratorSpi
+    extends KeyPairGeneratorAdapter
 {
-
-  // Constants and variables
-  // -------------------------------------------------------------------------
-
-  // Constructor(s)
-  // -------------------------------------------------------------------------
-
   public RSAKeyPairGeneratorSpi()
   {
     super(Registry.RSA_KPG);
   }
 
-  // Class methods
-  // -------------------------------------------------------------------------
-
-  // Instance methods
-  // -------------------------------------------------------------------------
-
   public void initialize(int keysize, SecureRandom random)
   {
     HashMap attributes = new HashMap();
-    attributes.put(RSAKeyPairGenerator.MODULUS_LENGTH, new Integer(keysize));
+    attributes.put(RSAKeyPairGenerator.MODULUS_LENGTH, Integer.valueOf(keysize));
     if (random != null)
-      {
-        attributes.put(RSAKeyPairGenerator.SOURCE_OF_RANDOMNESS, random);
-      }
+      attributes.put(RSAKeyPairGenerator.SOURCE_OF_RANDOMNESS, random);
 
     attributes.put(RSAKeyPairGenerator.PREFERRED_ENCODING_FORMAT,
-                   new Integer(Registry.ASN1_ENCODING_ID));
+                   Integer.valueOf(Registry.ASN1_ENCODING_ID));
     adaptee.setup(attributes);
   }
 
@@ -95,21 +81,16 @@ public class RSAKeyPairGeneratorSpi extends KeyPairGeneratorAdapter
     HashMap attributes = new HashMap();
     if (params != null)
       {
-        if (!(params instanceof RSAKeyGenParameterSpec))
-          {
-            throw new InvalidAlgorithmParameterException("params");
-          }
+        if (! (params instanceof RSAKeyGenParameterSpec))
+          throw new InvalidAlgorithmParameterException("params");
 
         attributes.put(RSAKeyPairGenerator.RSA_PARAMETERS, params);
       }
-
     if (random != null)
-      {
-        attributes.put(RSAKeyPairGenerator.SOURCE_OF_RANDOMNESS, random);
-      }
+      attributes.put(RSAKeyPairGenerator.SOURCE_OF_RANDOMNESS, random);
 
     attributes.put(RSAKeyPairGenerator.PREFERRED_ENCODING_FORMAT,
-                   new Integer(Registry.ASN1_ENCODING_ID));
+                   Integer.valueOf(Registry.ASN1_ENCODING_ID));
     adaptee.setup(attributes);
   }
 }
