@@ -43,21 +43,12 @@ import java.io.IOException;
 
 public interface PasswordProtectedEntry
 {
-
-  // Constant.
-  // ------------------------------------------------------------------------
-
-  /**
-   * The iteration count for password-based KDFs.
-   */
-  Integer ITERATION_COUNT = new Integer(1000);
-
-  // Method.
-  // ------------------------------------------------------------------------
+  /** The iteration count for password-based KDFs. */
+  Integer ITERATION_COUNT = Integer.valueOf(1000);
 
   /**
    * Encodes this entry, protected by a password.
-   *
+   * 
    * @param out The output stream to encode to.
    * @param password The password.
    * @throws IOException If an I/O error occurs.
